Remove branding from front page, change colour of header

--- a/resources/main.css
+++ b/resources/main.css
@@ -2075,7 +2075,7 @@ sub {
     border-bottom: 0; }
 
 .p-navigation {
-  background-color: #e95420;
+  background-color: #000000;
   color: #fff;
   margin-bottom: 2rem;
   position: relative;
