Rewrite navigation using latest Vanilla

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,3 +2,8 @@
 
 @import 'vanilla-framework/scss/vanilla';
 @include vanilla;
+
+// Navigation hover colour override
+.p-navigation__link > a:hover {
+  background-color: $color-brand;
+}
