--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -1,4 +1,4 @@
-$color-accent: #77216F;
-$color-navigation-background: #252525;
-$color-hero: #333;
-$color-article: #E95420;
+$color-accent: #77216f;
+$color-navigation-background: #333;
+$color-hero: #252525;
+$color-article: #e95420;
