Update vanilla to 2.4.1 & update navigtion

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -2,3 +2,5 @@ $color-accent: #77216f;
 $color-navigation-background: #333;
 $color-hero: #252525;
 $color-article: #e95420;
+
+$theme-default-nav: dark;
