--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -59,6 +59,7 @@ $strip-gradient: linear-gradient(195deg, #e9500e 0%, #6e2953 34%, #25001e 100%);
 
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 
   &__date {
     color: $color-mid-dark;
@@ -84,6 +85,12 @@ $strip-gradient: linear-gradient(195deg, #e9500e 0%, #6e2953 34%, #25001e 100%);
     margin: 0 0 1.5rem 0;
     padding: 0;
   }
+}
+
+.p-card__footer {
+  border-top: 1px solid #d9d9d9;
+  margin: 0 -1rem;
+  padding: 1rem 1rem 0 1rem;
 }
 
 .p-icon-link {
@@ -136,5 +143,37 @@ $strip-gradient: linear-gradient(195deg, #e9500e 0%, #6e2953 34%, #25001e 100%);
       padding-left: $sph-inner--large;
       padding-right: $sph-inner--large;
     }
+  }
+}
+
+.p-tutorials-meter {
+  background-image: url(https://assets.ubuntu.com/v1/19c4273e-level+of+difficulty.svg);
+  background-position-x: -75px;
+  background-position-y: center;
+  background-repeat: no-repeat;
+  display: inline-block;
+  height: 1.5rem;
+  margin-left: 0.125rem;
+  text-indent: -9999px;
+  width: 74px;
+
+  &.p-tutorials-meter--1 {
+    background-position-x: -60px;
+  }
+
+  &.p-tutorials-meter--2 {
+    background-position-x: -45px;
+  }
+
+  &.p-tutorials-meter--3 {
+    background-position-x: -30px;
+  }
+
+  &.p-tutorials-meter--4 {
+    background-position-x: -15px;
+  }
+
+  &.p-tutorials-meter--5 {
+    background-position-x: 0;
   }
 }
