--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,5 @@
-@import 'settings';
-@import 'vanilla-framework/scss/vanilla';
+@import "settings";
+@import "vanilla-framework/scss/vanilla";
 
 @include vanilla;
 
@@ -13,7 +13,7 @@ $strip-gradient: linear-gradient(195deg, #e9500e 0%, #6e2953 34%, #25001e 100%);
   color: $color-x-light;
 
   @media (min-width: $breakpoint-medium) {
-    background-image: url('https://assets.ubuntu.com/v1/e5dfa930-AdobeStock_126396245_x1.jpg');
+    background-image: url("https://assets.ubuntu.com/v1/e5dfa930-AdobeStock_126396245_x1.jpg");
     background-position: right;
     background-repeat: no-repeat;
     overflow: hidden;
@@ -21,7 +21,7 @@ $strip-gradient: linear-gradient(195deg, #e9500e 0%, #6e2953 34%, #25001e 100%);
 
     &::after {
       background-image: $strip-gradient;
-      content: '';
+      content: "";
       height: 100%;
       min-width: 700px;
       position: absolute;
@@ -32,10 +32,10 @@ $strip-gradient: linear-gradient(195deg, #e9500e 0%, #6e2953 34%, #25001e 100%);
     }
 
     &::before {
-      background-image: url('https://assets.ubuntu.com/v1/685ac3e2-mir-suru.svg');
+      background-image: url("https://assets.ubuntu.com/v1/685ac3e2-mir-suru.svg");
       background-repeat: no-repeat;
       background-size: 100% 100%;
-      content: '';
+      content: "";
       height: 100%;
       left: 0;
       mix-blend-mode: multiply;
@@ -95,7 +95,7 @@ $strip-gradient: linear-gradient(195deg, #e9500e 0%, #6e2953 34%, #25001e 100%);
 
 .p-card__link-title {
   display: block;
-  margin: 21px  0 24px 0;
+  margin: 21px 0 24px 0;
   text-align: center;
 }
 
@@ -110,7 +110,7 @@ $strip-gradient: linear-gradient(195deg, #e9500e 0%, #6e2953 34%, #25001e 100%);
 }
 
 // XXX Negative margin-bottom override
-[class^='p-strip'].is-bordered {
+[class^="p-strip"].is-bordered {
   margin-bottom: 0;
 }
 
