Added a community link in the header & copy update

--- a/src/_includes/base_layout.html
+++ b/src/_includes/base_layout.html
@@ -71,6 +71,9 @@
           <li class="p-navigation__link" role="menuitem">
             <a href="/tutorials/">Tutorials</a>
           </li>
+          <li class="p-navigation__link" role="menuitem">
+            <a class="p-link--external" href="https://discourse.ubuntu.com/c/mir">Community</a>
+          </li>
         </ul>
       </nav>
     </div>
