--- a/src/_includes/base_layout.html
+++ b/src/_includes/base_layout.html
@@ -71,6 +71,9 @@
           <li class="p-navigation__link" role="menuitem">
             <a href="/tutorials/">Tutorials</a>
           </li>
+          <li class="p-navigation__link" role="menuitem">
+            <a href="/ubuntu-frame/">Ubuntu Frame </a>
+          </li>
         </ul>
       </nav>
     </div>
