Change scss to work with vanilla-3.0

--- a/src/_includes/base_layout.html
+++ b/src/_includes/base_layout.html
@@ -50,7 +50,7 @@
     <div class="p-navigation__row">
       <div class="p-navigation__banner">
         <div class="p-navigation__logo u-vertically-center">
-          <a class="p-navigation__link" href="/" style="color:white; text-transform: capitalize;">
+          <a class="p-navigation__item" href="/" style="color:white; text-transform: capitalize;">
             Mir display server
           </a>
         </div>
@@ -61,15 +61,15 @@
         <span class="u-off-screen">
           <a href="#main-content">Jump to main content</a>
         </span>
-        <ul class="p-navigation__links" role="menu">
-          <li class="p-navigation__link" role="menuitem">
-            <a href="/ubuntu-frame/">Ubuntu Frame </a>
+        <ul class="p-navigation__items" role="menu">
+          <li class="p-navigation__item" role="menuitem">
+            <a href="/ubuntu-frame/" class="p-navigation__link">Ubuntu Frame </a>
           </li>
-          <li class="p-navigation__link" role="menuitem">
-            <a href="/tutorials/">Tutorials</a>
+          <li class="p-navigation__item" role="menuitem">
+            <a href="/tutorials/" class="p-navigation__link">Tutorials</a>
           </li>
-          <li class="p-navigation__link" role="menuitem">
-            <a class="p-link--external" href="https://discourse.ubuntu.com/c/mir">Community</a>
+          <li class="p-navigation__item" role="menuitem">
+            <a href="https://discourse.ubuntu.com/c/mir" class="p-navigation__link">Community</a>
           </li>
         </ul>
       </nav>
