--- a/templates/404.html
+++ b/templates/404.html
@@ -1,8 +1,6 @@
----
-layout: base_layout
-title: "404: Page not found"
-permalink: 404.html
----
+{% extends 'base_layout.html' %}
+
+{% block title %}400: Not found{% endblock %}
 
 {% block content %}
 <section class="p-strip is-deep is-bordered">
