--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
----
-layout: base_layout
-title: Mir display server - The fast, open and secure display server for any device
-copydoc: https://docs.google.com/document/d/1wqmWPx4TJ_oJoFt4gBOg4trYMIAsugMYtHGXzYJx8kc/edit#
-metadata: Mir is the fast, open and secure display server to unlock next-generation user experiences. Mir runs on a range of Linux powered devices including traditional desktops, IoT and embedded products.
----
+
+{% extends 'base_layout.html' %}
+
+{% block title %}Mir display server - The fast, open and secure display server for any device{% endblock title %}
+{% block copydoc %}https://docs.google.com/document/d/1wqmWPx4TJ_oJoFt4gBOg4trYMIAsugMYtHGXzYJx8kc/edit#{% endblock copydoc %}
+{% block meta_description %}Mir is the fast, open and secure display server to unlock next-generation user experiences. Mir runs on a range of Linux powered devices including traditional desktops, IoT and embedded products.{% endblock %}
 
 {% block content %}
 <section class="p-strip--hero is-deep">
