--- a/templates/tutorials.html
+++ b/templates/tutorials.html
@@ -1,8 +1,8 @@
----
-layout: base_layout
-title: Mir Server tutorials
-metadata: Mir is the fast, open and secure display server to unlock next-generation user experiences. Mir runs on a range of Linux powered devices including traditional desktops, IoT and embedded products.
----
+{% extends 'base_layout.html' %}
+
+{% block title %}Mir Server tutorials{% endblock title %}
+{% block copydoc %}https://docs.google.com/document/d/1P4xOahtq6VVY6llAAAmQ4cX7ip4zzNXxXciuZ9joxMw/edit#{% endblock copydoc %}
+{% block meta_description %}Mir is the fast, open and secure display server to unlock next-generation user experiences. Mir runs on a range of Linux powered devices including traditional desktops, IoT and embedded products.{% endblock %}
 
 {% block content %}
 <section class="p-strip is-bordered">
