Add Ubuntu Frame docs

--- a/templates/docs/search.html
+++ b/templates/docs/search.html
@@ -25,7 +25,7 @@
     <div class="u-fixed-width">
       <form class="p-search-box" action="/docs/search">
         <label for="search-input" class="u-off-screen">Search</label>
-        <input class="p-search-box__input" name="q" id="search-input" type="search" {% if query %}value="{{ query }}"{% endif %} placeholder="e.g. multipass launch" />
+        <input class="p-search-box__input" name="q" id="search-input" type="search" {% if query %}value="{{ query }}"{% endif %} placeholder="e.g. ubuntu frame" />
         {% if siteSearch %}
           <input name="siteSearch" type="hidden" value="{{ siteSearch }}" />
         {% endif %}
@@ -80,8 +80,7 @@
           <div class="col-6">
             <h3>Still no luck?</h3>
             <ul class="p-list">
-              <li class="p-list__item is-ticked"><a href="/">Visit the Multipass homepage</a></li>
-              <li class="p-list__item is-ticked"><a href="https://discourse.ubuntu.com/c/multipass/21">Visit the forum</a></li>
+              <li class="p-list__item is-ticked"><a href="https://discourse.ubuntu.com/t/ubuntu-frame-documentation/27559">Visit the forum</a></li>
             </ul>
           </div>
         </div>
