Fix dqlite references
Fixes #182

--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -32,8 +32,8 @@
   <meta name="copydoc" content="{% block meta_copydoc %}{% endblock %}">
 
   {% if self.title() %}
-  <meta name="twitter:title" content="{{ self.title() }} | Dqlite">
-  <meta property="og:title" content="{{ self.title() }} | Dqlite">
+  <meta name="twitter:title" content="{{ self.title() }}">
+  <meta property="og:title" content="{{ self.title() }}">
   {% endif %}
 
   {% if self.meta_description() %}
