Add prism for syntax highlighting

--- a/templates/docs/document.html
+++ b/templates/docs/document.html
@@ -148,4 +148,6 @@
 
   setupSideNavigations('.p-side-navigation, [class*="p-side-navigation--"]');
 </script>
+
+<script src="{{ versioned_static('js/prism.js') }}"></script>
 {% endblock %}
