change Mir-kiosk for Ubuntu Frame

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
     <div class="col-8 col-medium-4">
       <h2>Easy setup and deployment</h2>
       <p class="p-heading--4">Mir is the fastest path for the deployment of your smart display </p>
-      <p>Through features such as Mir-kiosk snap, developers instantly have a black screen with a mouse pointer to run any application you want. Mir instantly turns any device into a kiosk or digital signage solution. </p>
+      <p>Through features such as Ubuntu Frame, developers instantly have a black screen with a mouse pointer to run any application you want. Mir instantly turns any device into a kiosk or digital signage solution. </p>
     </div>
   </div>
 </section>
