Fix internal doc link

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,10 +41,10 @@
   </div>
   <div class="row">
     <div class="col-4 p-card">
-        <a class="p-card__link-title" href="https://mir-server.io/doc/"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/8c0acddd-Mir.svg" alt="Mir Server wordmark"/></a>
+        <a class="p-card__link-title" href="/doc/"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/8c0acddd-Mir.svg" alt="Mir Server wordmark"/></a>
         <hr class="u-sv1">
       <div class="p-card--content">
-        <p><a href="https://mir-server.io/doc/">Mir</a> is a library for writing graphical shells for GNU/Linux and similar operating systems. It incorporates much of what traditionally requires multiple components: a window manager, a compositor and a display server.</p>
+        <p><a href="/doc/">Mir</a> is a library for writing graphical shells for GNU/Linux and similar operating systems. It incorporates much of what traditionally requires multiple components: a window manager, a compositor and a display server.</p>
       </div>
     </div>
     <div class="col-4 p-card">
