Update global-nav to 3.1.4

--- a/static/sass/_settings.scss
+++ b/static/sass/_settings.scss
@@ -1,6 +1,6 @@
-$color-accent: #77216f;
-
+$color-accent: #e95420;
+$color-aubergine: #77216f;
 $color-hero: #252525;
-$color-article: #e95420;
 
 $theme-default-nav: dark;
+$breakpoint-navigation-threshold: 940px;
