--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -96,28 +96,11 @@ $strip-gradient-new: linear-gradient(195deg, #e9500e 0%, #6e2953 47%, #25001e 10
 .p-card--featured {
   @extend %p-card--highlighted;
 
-  @include vf-highlight-bar($color-accent);
+  @include vf-highlight-bar($color-aubergine);
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
-  &__date {
-    color: $color-mid-dark;
-    font-size: 0.875rem;
-    font-style: italic;
-    margin: 0 0 1.5rem 0;
-    padding: 0;
-  }
-}
-
-.p-card--article {
-  @extend %p-card--highlighted;
-
-  @include vf-highlight-bar($color-article);
-
-  display: flex;
-  flex-direction: column;
 
   &__date {
     color: $color-mid-dark;
@@ -138,11 +121,6 @@ $strip-gradient-new: linear-gradient(195deg, #e9500e 0%, #6e2953 47%, #25001e 10
   display: block;
   margin: 21px 0 24px 0;
   text-align: center;
-}
-
-// XXX Negative margin-bottom override
-[class^="p-strip"].is-bordered {
-  margin-bottom: 0;
 }
 
 // XXX Remove margin-bottom from .p-footer links
