--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -9,7 +9,7 @@
   <meta name="copydoc" content="https://docs.google.com/document/d/1wqmWPx4TJ_oJoFt4gBOg4trYMIAsugMYtHGXzYJx8kc/edit">
 
   <title>
-    {% block title %}Mir Server{% endblock %}
+    {% block title %}Canonical Mir{% endblock %}
   </title>
 
   <!-- GitHub buttons -->
@@ -32,8 +32,8 @@
   <meta name="copydoc" content="{% block meta_copydoc %}{% endblock %}">
 
   {% if self.title() %}
-  <meta name="twitter:title" content="{{ self.title() }}">
-  <meta property="og:title" content="{{ self.title() }}">
+  <meta name="twitter:title" content="{{ self.title() }} | Canonical Mir">
+  <meta property="og:title" content="{{ self.title() }} | Canonical Mir">
   {% endif %}
 
   {% if self.meta_description() %}
@@ -42,8 +42,8 @@
   {% endif %}
 
   <link rel="canonical" href="{% block canonical_url %}{{ request.url }}{% endblock %}">
-  <link rel="icon" type="image/png" href="https://assets.ubuntu.com/v1/cb22ba5d-favicon-16x16.png" sizes="16x16">
-  <link rel="icon" type="image/png" href="https://assets.ubuntu.com/v1/49a1a858-favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://assets.ubuntu.com/v1/3ba2d831-cof-favicon-16x16.ico" sizes="16x16" />
+  <link rel="icon" type="image/png" href="https://assets.ubuntu.com/v1/2c6276dc-cof-favicon-32x32.ico" sizes="32x32" />
 
   <link rel="apple-touch-icon" sizes="144x144" href="https://assets.ubuntu.com/v1/3361409d-apple-touch-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="114x114" href="https://assets.ubuntu.com/v1/5fe4d3c8-apple-touch-icon-114x114.png">
@@ -55,12 +55,6 @@
   <link rel="stylesheet" href="/static/css/styles.css">
   <script src="{{ versioned_static('js/build/global-nav/global-nav.js') }}"></script>
   <script src="{{ versioned_static('js/build/cookie-policy/cookie-policy.js') }}"></script>
-  <script>
-    canonicalGlobalNav.createNav({
-      maxWidth: '72rem',
-    });
-    cpNs.cookiePolicy();
-  </script>
 </head>
 
 <body>
@@ -77,19 +71,16 @@
             <div class="p-navigation__logo-tag">
               <img class="p-navigation__logo-icon" src="https://assets.ubuntu.com/v1/82818827-CoF_white.svg" alt="">
             </div>
-            <span class="p-navigation__logo-title">Mir display server</span>
+            <span class="p-navigation__logo-title">Canonical Mir</span>
           </a>
         </div>
         <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
         <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close menu</a>
       </div>
       <nav class="p-navigation__nav">
-        <span class="u-off-screen">
-          <a href="#main-content">Jump to main content</a>
-        </span>
         <ul class="p-navigation__items">
           <li class="p-navigation__item">
-            <a href="/ubuntu-frame/" class="p-navigation__link">Ubuntu Frame </a>
+            <a href="/ubuntu-frame/" class="p-navigation__link">Ubuntu Frame</a>
           </li>
           <li class="p-navigation__item">
             <a href="/tutorials/" class="p-navigation__link">Tutorials</a>
@@ -200,14 +191,14 @@ function sendEvent(category, origin, destination, label) {
     });
   }
 }
-
 </script>
 <script>
   if (typeof cpNs !== "undefined") {
-    cpNs.cookiePolicy();
+      cpNs.cookiePolicy();
+    }
+  if (typeof canonicalGlobalNav !== "undefined") {
+    canonicalGlobalNav.createNav({breakpoint: 940});
   }
-  canonicalGlobalNav.createNav({maxWidth:"72rem"});
 </script>
 </body>
-
 </html>
