--- a/templates/docs/search.html
+++ b/templates/docs/search.html
@@ -6,20 +6,6 @@
 
 {% block content %}
 
-  <div class="p-strip is-shallow">
-    <div class="u-fixed-width">
-      {% if query %}
-        {% if estimatedTotal == 0 %}
-          <h1 class="p-heading--2">Sorry we couldn't find "{{ query }}" in docs</h1>
-        {% else %}
-          <h1 class="p-heading--2">Search results for "{{ query }}" in docs</h1>
-        {% endif %}
-      {% else %}
-        <h1>Search Ubuntu and Canonical sites</h1>
-      {% endif %}
-    </div>
-  </div>
-
   {# search form #}
   <div class="p-strip--light is-shallow">
     <div class="u-fixed-width">
@@ -36,6 +22,11 @@
 
   {% if results %}
     {% if results.entries %}
+      <div class="p-strip is-shallow u-no-padding--bottom">
+        <div class="u-fixed-width">
+          <h1 class="p-heading--2 u-no-margin--bottom">We've found these results for your search <strong>"{{ query }}"</strong></h1>
+        </div>
+      </div>
       {% for item in results.entries %}
         <div class="p-strip is-shallow">
           <div class="row">
@@ -49,23 +40,25 @@
           </div>
         </div>
       {% endfor %}
+      <div class="row">
+        <div class="col-6 u-align--left">
+          {% if results.queries and results.queries.previousPage %}
+            <a href="/docs/search?q={{ query }}&amp;start={{ results.queries.previousPage[0].startIndex }}{% if siteSearch %}&amp;siteSearch={{ siteSearch }}{% endif %}">&#8249;&nbsp;Previous</a>
+          {% endif %}
+        </div>
 
-      <div class="p-strip">
-        <div class="row">
-          <div class="col-6 u-align--left">
-            {% if results.queries and results.queries.previousPage %}
-              <a href="/docs/search?q={{ query }}&amp;start={{ results.queries.previousPage[0].startIndex }}{% if siteSearch %}&amp;siteSearch={{ siteSearch }}{% endif %}">&#8249;&nbsp;Previous</a>
-            {% endif %}
-          </div>
-
-          <div class="col-6 u-align--right">
-            {% if results.queries and results.queries.nextPage %}
-              <a href="/docs/search?q={{ query }}&amp;start={{ results.queries.nextPage[0].startIndex }}{% if siteSearch %}&amp;siteSearch={{ siteSearch }}{% endif %}">Next&nbsp;&#8250;</a>
-            {% endif %}
-          </div>
+        <div class="col-6 u-align--right">
+          {% if results.queries and results.queries.nextPage %}
+            <a href="/docs/search?q={{ query }}&amp;start={{ results.queries.nextPage[0].startIndex }}{% if siteSearch %}&amp;siteSearch={{ siteSearch }}{% endif %}">Next&nbsp;&#8250;</a>
+          {% endif %}
         </div>
       </div>
     {% else %}
+      <div class="p-strip">
+        <div class="u-fixed-width">
+          <h1 class="p-heading--2 u-no-margin--bottom">We haven't found any results for your search <strong>"{{ query }}"</strong>.</h1>
+        </div>
+      </div>
       <div class="p-strip">
         <div class="row">
           <div class="col-6">
