--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -9,7 +9,7 @@
   <meta name="copydoc" content="https://docs.google.com/document/d/1wqmWPx4TJ_oJoFt4gBOg4trYMIAsugMYtHGXzYJx8kc/edit">
 
   <title>
-    {% block title %}Canonical Mir{% endblock %}
+    {% block title %}Canonical Mir Display Server{% endblock %}
   </title>
 
   <!-- GitHub buttons -->
