--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -32,8 +32,8 @@
   <meta name="copydoc" content="{% block meta_copydoc %}{% endblock %}">
 
   {% if self.title() %}
-  <meta name="twitter:title" content="{{ self.title() }} | Canonical Mir">
-  <meta property="og:title" content="{{ self.title() }} | Canonical Mir">
+  <meta name="twitter:title" content="{{ self.title() }} | Canonical Mir Display Server">
+  <meta property="og:title" content="{{ self.title() }} | Canonical Mir Display Server">
   {% endif %}
 
   {% if self.meta_description() %}
