--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,16 @@
       <p><a href="https://ubuntu.com/engage/build-smart-devices-with-mir-whitepaper" class="p-button--positive"><span>Download the whitepaper</span></a></p>
     </div>
     <div class="col-3 col-medium-2 u-hide--small u-align--center u-vertically-center">
-      <img src="https://assets.ubuntu.com/v1/8c0acddd-Mir.svg" alt="Mir Server wordmark" width="400"/>
+      {{
+        image (
+        url="https://assets.ubuntu.com/v1/b93c19ab-Canonical-Mir-2022.svg",
+        alt="",
+        width="255",
+        height="150",
+        hi_def=True,
+        loading="auto"
+        ) | safe
+      }}
     </div>
   </div>
 </section>
@@ -41,14 +50,36 @@
   </div>
   <div class="row">
     <div class="col-4 p-card">
-        <a class="p-card__link-title" href="/doc/"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/8c0acddd-Mir.svg" alt="Mir Server wordmark"/></a>
+        <a class="p-card__link-title" href="/doc/">
+          {{
+            image (
+            url="https://assets.ubuntu.com/v1/5f7a064d-Canonical-MIR-logo-2022.png",
+            alt="",
+            width="61",
+            height="36",
+            hi_def=True,
+            loading="auto"
+            ) | safe
+          }}
+        </a>
         <hr class="u-sv1">
       <div class="p-card--content">
         <p><a href="/doc/">Mir</a> is a library for writing graphical shells for GNU/Linux and similar operating systems. It incorporates much of what traditionally requires multiple components: a window manager, a compositor and a display server.</p>
       </div>
     </div>
     <div class="col-4 p-card">
-      <a class="p-card__link-title" href="https://snapcraft.io/ubuntu-frame"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/79e5a4c2-Ubuntu+Frame.svg" alt="Ubuntu Frame wordmark"/></a>
+      <a class="p-card__link-title" href="https://snapcraft.io/ubuntu-frame">
+        {{
+          image (
+          url="https://assets.ubuntu.com/v1/540688d1-Canonical-Ubuntu-Frame-logo-2022.svg",
+          alt="Ubuntu Frame trademark",
+          width="154",
+          height="36",
+          hi_def=True,
+          loading="auto"
+          ) | safe
+        }}
+      </a>
       <hr class="u-sv1">
       <div class="p-card--content">
         <p><a href="https://snapcraft.io/ubuntu-frame">Ubuntu Frame</a> is a fullscreen shell for edge devices. Whether you are building a kiosk, point of sale, IoT device or any other product that requires a graphical output or display to the user, Ubuntu Frame instantly allows your device to run a fullscreen window. </p>
@@ -74,7 +105,16 @@
       </p>
     </div>
     <div class="col-4 col-medium-2 u-hide--small u-align--center u-vertically-center">
-      <img src="https://assets.ubuntu.com/v1/9cf9f323-Mir-flexibility.svg" alt="" width="400"/>
+      {{
+        image (
+        url="https://assets.ubuntu.com/v1/9cf9f323-Mir-flexibility.svg",
+        alt="",
+        width="210",
+        height="150",
+        hi_def=True,
+        loading="auto"
+        ) | safe
+      }}
     </div>
   </div>
 </section>
