--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
         <a class="p-card__link-title" href="/doc/">
           {{
             image (
-            url="https://assets.ubuntu.com/v1/5f7a064d-Canonical-MIR-logo-2022.png",
+            url="https://assets.ubuntu.com/v1/b93c19ab-Canonical-Mir-2022.svg",
             alt="",
             width="61",
             height="36",
