Add #main-content to site content

--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -98,9 +98,12 @@
     </div>
   </header>
 
+  <main id="main-content">
   {% block content %}
     {{ content | safe }}
   {% endblock content %}
+  </main>
+
   <hr />
   <footer class="p-strip">
     <div class="row">
