--- a/templates/docs/document.html
+++ b/templates/docs/document.html
@@ -86,7 +86,7 @@
       </div>
     </aside>
 
-    <main class="col-9">
+    <main class="col-9" id="main-content">
       <h1>{{ document.title }}</h1>
       {{ document.body_html | safe }}
 			<div class="p-strip is-shallow">
