Fix the Vanilla bump to v2.4.0

--- a/templates/ubuntu-frame.html
+++ b/templates/ubuntu-frame.html
@@ -37,17 +37,34 @@
 </section>
 <section class="p-strip--light">
   <div class="u-fixed-width">
+    <p class="p-muted-heading">
+      Compatible with popular graphical toolkits
+    </p>
+  </div>
+  <div class="u-fixed-width">
     <div class="p-logo-section">
-      <p class="p-logo-section__title u-align-text--center">
-        COMPATIBLE WITH POPULAR GRAPHICAL TOOLKITS
-      </p>
       <div class="p-logo-section__items">
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/83a68156-electron-logo.svg" alt="Electron logo"></div>
-        <div class="p-logo-section__item u-align--center"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/4076f787-QT-software.png" alt="Qt logo"  style="max-width: 80px;"></div>
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/02ee3953-799px-Google-flutter-logo.png" alt="Flutter logo"></div>
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/d73dbd10-GTK+no+background+%281%29.png" alt="GTK logo" style="margin-left: 1rem;"></div>
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/24a4d66d-HTML5_logo_and_wordmark.svg" alt="HTML5 logo" style="max-height: 80px; margin-top: 1rem"></div>
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/c5977a9f-Simple_DirectMedia_Layer%2C_Logo.svg.png" alt="SDL logo" style="max-width: 90px"></div>
+        <div class="p-logo-section__item">
+          <img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/4ab5c788-logo-electron.svg" alt="Electron logo">
+        </div>
+        <div class="p-logo-section__item">
+          <img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/98d2bf31-144px%20QT%20logo.svg" alt="Qt logo" >
+        </div>
+        <div class="p-logo-section__item">
+          <img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/1d3e5eaf-flutter-logo.png" alt="Flutter logo">
+        </div>
+        <div class="p-logo-section__item">
+          <img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/d73dbd10-GTK+no+background+%25281%2529.png" alt="GTK logo">
+        </div>
+        <div class="p-logo-section__item">
+          <img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/9a661d86-html5-logo.png" alt="HTML5 logo">
+        </div>
+        <div class="p-logo-section__item">
+          <img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/82c52642-microsoft-azure.svg" alt="Microsoft Azure">
+        </div>
+        <div class="p-logo-section__item">
+          <img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/f0cf1fa3-google-cloud-logo.svg" alt="Google Cloud Platform">
+        </div>
       </div>
     </div>
   </div>
