--- a/templates/ubuntu-frame.html
+++ b/templates/ubuntu-frame.html
@@ -63,6 +63,9 @@
           <img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/82c52642-microsoft-azure.svg" alt="Microsoft Azure">
         </div>
         <div class="p-logo-section__item">
+          <img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/086b3df5-sdl-logo.svg" alt="Simple Directmedia Layer">
+        </div>
+        <div class="p-logo-section__item">
           <img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/f0cf1fa3-google-cloud-logo.svg" alt="Google Cloud Platform">
         </div>
       </div>
