Updated landing page copy

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
         </a>
         <hr class="u-sv1">
       <div class="p-card--content">
-        <p><a href="/doc/">Mir</a> is a library for writing graphical shells for GNU/Linux and similar operating systems. It incorporates much of what traditionally requires multiple components: a window manager, a compositor and a display server.</p>
+        <p><a href="https://canonical-mir.readthedocs-hosted.com/">Mir</a> is a library for writing graphical shells for GNU/Linux and similar operating systems. It incorporates much of what traditionally requires multiple components: a window manager, a compositor and a display server.</p>
       </div>
     </div>
     <div class="col-4 p-card">
@@ -89,7 +89,7 @@
       <a class="p-card__link-title" href="https://snapcraft.io/egmde"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/c01b1a65-egmde.svg" alt="egme wordmark"/></a>
       <hr class="u-sv1">
       <div class="p-card--content">
-        <p><a href="https://snapcraft.io/egmde">egmde</a> is a lightweight, basic, usable graphical shell, for desktop environments. This basic shell includes several keyboard shortcuts and optional support for workspaces and shell components.</p>
+        <p><a href="https://github.com/Miriway/Miriway">Miriway</a> is a lightweight, basic, usable graphical shell, for desktop environments. This basic shell includes several keyboard shortcuts and optional support for workspaces and shell components.</p>
       </div>
     </div>
   </div>
