--- a/templates/index.html
+++ b/templates/index.html
@@ -105,6 +105,17 @@
       </p>
     </div>
     <div class="col-4 col-medium-2 u-hide--small u-align--center u-vertically-center">
+
+      {{ image (
+        url="https://assets.ubuntu.com/v1/99ba9552-Mir-flexibility-updated.svg",
+        alt="",
+        width="210",
+        height="150",
+        hi_def=True,
+        loading="auto"
+        ) | safe
+      }}
+
       {{
         image (
         url="https://assets.ubuntu.com/v1/9cf9f323-Mir-flexibility.svg",
