--- a/templates/index.html
+++ b/templates/index.html
@@ -105,27 +105,7 @@
       </p>
     </div>
     <div class="col-4 col-medium-2 u-hide--small u-align--center u-vertically-center">
-
-      {{ image (
-        url="https://assets.ubuntu.com/v1/99ba9552-Mir-flexibility-updated.svg",
-        alt="",
-        width="210",
-        height="150",
-        hi_def=True,
-        loading="auto"
-        ) | safe
-      }}
-
-      {{
-        image (
-        url="https://assets.ubuntu.com/v1/9cf9f323-Mir-flexibility.svg",
-        alt="",
-        width="210",
-        height="150",
-        hi_def=True,
-        loading="auto"
-        ) | safe
-      }}
+      <img src="https://assets.ubuntu.com/v1/af1317b8-Mir-flexibility-updated.svg" alt="">
     </div>
   </div>
 </section>
