--- a/templates/index.html
+++ b/templates/index.html
@@ -220,7 +220,7 @@
       <h2>Full enterprise support available<br > with no subscription needed</h2>
       <p class="p-heading--4">Optional 24/7 support with 10 year security maintenance</p>
       <p>
-        As the publishers of Mir, we deliver the world’s most efficient display server and signage solution for Ubuntu.
+        As the publishers of Mir, we deliver the world's most efficient display server and signage solution for Ubuntu.
       </p>
       <p>
         <a class="p-button--positive" href="https://ubuntu.com/internet-of-things/digital-signage#get-in-touch">
